// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render as dismissable 1`] = `
<div
  class="wp-components-animated css-1ihlkjd"
  data-g2-c16t="true"
  data-g2-component="Animated"
  style="opacity: 0; transform: scale(0.9) translateZ(0);"
>
  <div
    class="wp-components-alert css-wp89yd"
    data-g2-c16t="true"
    data-g2-component="Alert"
  >
    <div
      class="wp-components-view wp-components-flex css-1itisbr"
      data-g2-c16t="true"
      data-g2-component="Flex"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-14pv9go"
        data-g2-c16t="true"
        data-g2-component="FlexBlock"
      >
        <div
          class="wp-components-view css-13b9wrh"
          data-g2-c16t="true"
          data-g2-component="AlertContent"
        >
          I like warm hugs
        </div>
      </div>
      <div
        class="wp-components-flex-item css-1mq9jmc"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <div
          class="css-7cnmpf"
        >
          <button
            aria-busy="false"
            class="css-76hjhg"
            data-destructive="false"
            data-g2-c16t="true"
            data-g2-component="CloseButton"
            data-icon="true"
            title="Dismiss"
            type="button"
          >
            <span
              class="wp-components-view wp-components-flex css-1gjqylm"
              data-g2-c16t="true"
              data-g2-component="Flex"
            >
              <span
                class="wp-components-flex-item css-kq9hj8"
                data-g2-c16t="true"
                data-g2-component="ButtonIcon"
              >
                <div
                  class="wp-components-icon css-1b2ezh6"
                  data-g2-c16t="true"
                  data-g2-component="Icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    size="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <line
                      x1="18"
                      x2="6"
                      y1="6"
                      y2="18"
                    />
                    <line
                      x1="6"
                      x2="18"
                      y1="6"
                      y2="18"
                    />
                  </svg>
                </div>
              </span>
            </span>
            <span
              class="wp-components-elevation css-1l26w1c"
              data-g2-c16t="true"
              data-g2-component="ButtonElevation"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-animated css-1ihlkjd"
  data-g2-c16t="true"
  data-g2-component="Animated"
  style="opacity: 0; transform: scale(0.9) translateZ(0);"
>
  <div
    class="wp-components-alert css-vsalgz"
    data-g2-c16t="true"
    data-g2-component="Alert"
  >
    <div
      class="wp-components-view wp-components-flex css-1itisbr"
      data-g2-c16t="true"
      data-g2-component="Flex"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-14pv9go"
        data-g2-c16t="true"
        data-g2-component="FlexBlock"
      >
        <div
          class="wp-components-view css-1ihlkjd"
          data-g2-c16t="true"
          data-g2-component="AlertContent"
        >
          I like warm hugs
        </div>
      </div>
      <div
        class="wp-components-flex-item css-1mq9jmc"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      />
    </div>
  </div>
</div>
`;

exports[`props should render with status 1`] = `
<div
  class="wp-components-view css-1ihlkjd"
  data-g2-c16t="true"
  data-g2-component="Alerts"
>
  <div
    class="wp-components-animated css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="Animated"
    style="opacity: 1; transform: none;"
  >
    <div
      class="wp-components-alert css-1l96gzn"
      data-g2-c16t="true"
      data-g2-component="Alert"
    >
      <div
        class="wp-components-view wp-components-flex css-1itisbr"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <div
          class="wp-components-flex-item wp-components-flex-block css-14pv9go"
          data-g2-c16t="true"
          data-g2-component="FlexBlock"
        >
          <div
            class="wp-components-view css-13b9wrh"
            data-g2-c16t="true"
            data-g2-component="AlertContent"
          >
            I like warm hugs
          </div>
        </div>
        <div
          class="wp-components-flex-item css-1mq9jmc"
          data-g2-c16t="true"
          data-g2-component="FlexItem"
        >
          <div
            class="css-1esfuet"
          >
            <button
              aria-busy="false"
              class="css-76hjhg"
              data-destructive="false"
              data-g2-c16t="true"
              data-g2-component="CloseButton"
              data-icon="true"
              title="Dismiss"
              type="button"
            >
              <span
                class="wp-components-view wp-components-flex css-1gjqylm"
                data-g2-c16t="true"
                data-g2-component="Flex"
              >
                <span
                  class="wp-components-flex-item css-kq9hj8"
                  data-g2-c16t="true"
                  data-g2-component="ButtonIcon"
                >
                  <div
                    class="wp-components-icon css-1b2ezh6"
                    data-g2-c16t="true"
                    data-g2-component="Icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      size="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="18"
                        x2="6"
                        y1="6"
                        y2="18"
                      />
                      <line
                        x1="6"
                        x2="18"
                        y1="6"
                        y2="18"
                      />
                    </svg>
                  </div>
                </span>
              </span>
              <span
                class="wp-components-elevation css-1l26w1c"
                data-g2-c16t="true"
                data-g2-component="ButtonElevation"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wp-components-animated css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="Animated"
    style="opacity: 1; transform: none;"
  >
    <div
      class="wp-components-alert css-wp89yd"
      data-g2-c16t="true"
      data-g2-component="Alert"
    >
      <div
        class="wp-components-view wp-components-flex css-1itisbr"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <div
          class="wp-components-flex-item wp-components-flex-block css-14pv9go"
          data-g2-c16t="true"
          data-g2-component="FlexBlock"
        >
          <div
            class="wp-components-view css-13b9wrh"
            data-g2-c16t="true"
            data-g2-component="AlertContent"
          >
            I like warm hugs
          </div>
        </div>
        <div
          class="wp-components-flex-item css-1mq9jmc"
          data-g2-c16t="true"
          data-g2-component="FlexItem"
        >
          <div
            class="css-7cnmpf"
          >
            <button
              aria-busy="false"
              class="css-76hjhg"
              data-destructive="false"
              data-g2-c16t="true"
              data-g2-component="CloseButton"
              data-icon="true"
              title="Dismiss"
              type="button"
            >
              <span
                class="wp-components-view wp-components-flex css-1gjqylm"
                data-g2-c16t="true"
                data-g2-component="Flex"
              >
                <span
                  class="wp-components-flex-item css-kq9hj8"
                  data-g2-c16t="true"
                  data-g2-component="ButtonIcon"
                >
                  <div
                    class="wp-components-icon css-1b2ezh6"
                    data-g2-c16t="true"
                    data-g2-component="Icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      size="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="18"
                        x2="6"
                        y1="6"
                        y2="18"
                      />
                      <line
                        x1="6"
                        x2="18"
                        y1="6"
                        y2="18"
                      />
                    </svg>
                  </div>
                </span>
              </span>
              <span
                class="wp-components-elevation css-1l26w1c"
                data-g2-c16t="true"
                data-g2-component="ButtonElevation"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wp-components-animated css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="Animated"
    style="opacity: 1; transform: none;"
  >
    <div
      class="wp-components-alert css-13fwilv"
      data-g2-c16t="true"
      data-g2-component="Alert"
    >
      <div
        class="wp-components-view wp-components-flex css-1itisbr"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <div
          class="wp-components-flex-item wp-components-flex-block css-14pv9go"
          data-g2-c16t="true"
          data-g2-component="FlexBlock"
        >
          <div
            class="wp-components-view css-13b9wrh"
            data-g2-c16t="true"
            data-g2-component="AlertContent"
          >
            I like warm hugs
          </div>
        </div>
        <div
          class="wp-components-flex-item css-1mq9jmc"
          data-g2-c16t="true"
          data-g2-component="FlexItem"
        >
          <div
            class="css-1qvtr6z"
          >
            <button
              aria-busy="false"
              class="css-76hjhg"
              data-destructive="false"
              data-g2-c16t="true"
              data-g2-component="CloseButton"
              data-icon="true"
              title="Dismiss"
              type="button"
            >
              <span
                class="wp-components-view wp-components-flex css-1gjqylm"
                data-g2-c16t="true"
                data-g2-component="Flex"
              >
                <span
                  class="wp-components-flex-item css-kq9hj8"
                  data-g2-c16t="true"
                  data-g2-component="ButtonIcon"
                >
                  <div
                    class="wp-components-icon css-1b2ezh6"
                    data-g2-c16t="true"
                    data-g2-component="Icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      size="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="18"
                        x2="6"
                        y1="6"
                        y2="18"
                      />
                      <line
                        x1="6"
                        x2="18"
                        y1="6"
                        y2="18"
                      />
                    </svg>
                  </div>
                </span>
              </span>
              <span
                class="wp-components-elevation css-1l26w1c"
                data-g2-c16t="true"
                data-g2-component="ButtonElevation"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wp-components-animated css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="Animated"
    style="opacity: 1; transform: none;"
  >
    <div
      class="wp-components-alert css-1xinusq"
      data-g2-c16t="true"
      data-g2-component="Alert"
    >
      <div
        class="wp-components-view wp-components-flex css-1itisbr"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <div
          class="wp-components-flex-item wp-components-flex-block css-14pv9go"
          data-g2-c16t="true"
          data-g2-component="FlexBlock"
        >
          <div
            class="wp-components-view css-13b9wrh"
            data-g2-c16t="true"
            data-g2-component="AlertContent"
          >
            I like warm hugs
          </div>
        </div>
        <div
          class="wp-components-flex-item css-1mq9jmc"
          data-g2-c16t="true"
          data-g2-component="FlexItem"
        >
          <div
            class="css-17srs5g"
          >
            <button
              aria-busy="false"
              class="css-76hjhg"
              data-destructive="false"
              data-g2-c16t="true"
              data-g2-component="CloseButton"
              data-icon="true"
              title="Dismiss"
              type="button"
            >
              <span
                class="wp-components-view wp-components-flex css-1gjqylm"
                data-g2-c16t="true"
                data-g2-component="Flex"
              >
                <span
                  class="wp-components-flex-item css-kq9hj8"
                  data-g2-c16t="true"
                  data-g2-component="ButtonIcon"
                >
                  <div
                    class="wp-components-icon css-1b2ezh6"
                    data-g2-c16t="true"
                    data-g2-component="Icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      size="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="18"
                        x2="6"
                        y1="6"
                        y2="18"
                      />
                      <line
                        x1="6"
                        x2="18"
                        y1="6"
                        y2="18"
                      />
                    </svg>
                  </div>
                </span>
              </span>
              <span
                class="wp-components-elevation css-1l26w1c"
                data-g2-c16t="true"
                data-g2-component="ButtonElevation"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wp-components-animated css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="Animated"
    style="opacity: 1; transform: none;"
  >
    <div
      class="wp-components-alert css-vsalgz"
      data-g2-c16t="true"
      data-g2-component="Alert"
    >
      <div
        class="wp-components-view wp-components-flex css-1itisbr"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <div
          class="wp-components-flex-item wp-components-flex-block css-14pv9go"
          data-g2-c16t="true"
          data-g2-component="FlexBlock"
        >
          <div
            class="wp-components-view css-13b9wrh"
            data-g2-c16t="true"
            data-g2-component="AlertContent"
          >
            I like warm hugs
          </div>
        </div>
        <div
          class="wp-components-flex-item css-1mq9jmc"
          data-g2-c16t="true"
          data-g2-component="FlexItem"
        >
          <div
            class="css-od5sl7"
          >
            <button
              aria-busy="false"
              class="css-76hjhg"
              data-destructive="false"
              data-g2-c16t="true"
              data-g2-component="CloseButton"
              data-icon="true"
              title="Dismiss"
              type="button"
            >
              <span
                class="wp-components-view wp-components-flex css-1gjqylm"
                data-g2-c16t="true"
                data-g2-component="Flex"
              >
                <span
                  class="wp-components-flex-item css-kq9hj8"
                  data-g2-c16t="true"
                  data-g2-component="ButtonIcon"
                >
                  <div
                    class="wp-components-icon css-1b2ezh6"
                    data-g2-c16t="true"
                    data-g2-component="Icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      size="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="18"
                        x2="6"
                        y1="6"
                        y2="18"
                      />
                      <line
                        x1="6"
                        x2="18"
                        y1="6"
                        y2="18"
                      />
                    </svg>
                  </div>
                </span>
              </span>
              <span
                class="wp-components-elevation css-1l26w1c"
                data-g2-c16t="true"
                data-g2-component="ButtonElevation"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render with title 1`] = `
<div
  class="wp-components-animated css-1ihlkjd"
  data-g2-c16t="true"
  data-g2-component="Animated"
  style="opacity: 0; transform: scale(0.9) translateZ(0);"
>
  <div
    class="wp-components-alert css-vsalgz"
    data-g2-c16t="true"
    data-g2-component="Alert"
  >
    <div
      class="wp-components-view wp-components-flex css-1itisbr"
      data-g2-c16t="true"
      data-g2-component="Flex"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-14pv9go"
        data-g2-c16t="true"
        data-g2-component="FlexBlock"
      >
        <div
          class="wp-components-view wp-components-spacer css-1483z0j"
          data-g2-c16t="true"
          data-g2-component="Spacer"
        >
          <div
            class="wp-components-text wp-components-heading css-na8zp1"
            data-g2-c16t="true"
            data-g2-component="Heading"
          >
            Hi
          </div>
        </div>
        <div
          class="wp-components-view css-1ihlkjd"
          data-g2-c16t="true"
          data-g2-component="AlertContent"
        >
          I like warm hugs
        </div>
      </div>
      <div
        class="wp-components-flex-item css-1mq9jmc"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      />
    </div>
  </div>
</div>
`;
